--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -1,19 +1,40 @@
-iname: GitHub Actions Demo
-run-name: ${{ github.actor }} is testing out GitHub Actions
-on: [push]
+name: Python Tests
+
+on:
+  push:
+    branches:
+      - main  # Cambia la rama si lo necesitas
+  pull_request:
+    branches:
+      - main  # Cambia la rama si lo necesitas
+
 jobs:
-  Explore-GitHub-Actions:
+  test:
     runs-on: ubuntu-latest
+   
     steps:
-      - run: echo "The job was automatically triggered by a ${{ github.event_name }} event."
-      - run: echo "This job is now running on a ${{ runner.os }} server hosted by GitHub!"
-      - run: echo "The name of your branch is ${{ github.ref }} and your repository is ${{
-github.repository }}."
-      - name: Check out repository code
+      - name: Checkout do repositorio
         uses: actions/checkout@v4
-      - run: echo "The ${{ github.repository }} repository has been cloned to the runner."
-      - run: echo "The workflow is now ready to test your code on the runner."
-      - name: List files in the repository
-          run: |
-            ls ${{ github.workspace }}
-      - run: echo "This job's status is ${{ job.status }}.
+
+      - name: Instalar Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'  # Cambia a versión que necesites
+
+      - name: Instalar dependencias
+        run: |
+          python -m pip install --upgrade pip
+          if [ -f requirements.txt ]; then
+            pip install -r requirements.txt
+          else
+            echo "Non hai requirements.txt"
+          fi
+
+      - name: Verificar execución de tests
+        run: echo "🏆 TESTS EXECUTÁNDOSE AGORA!"
+
+      - name: Executar tests
+        run: python -m unittest discover
+
+      - name: Verificar finalización de tests
+        run: echo "✅ TESTS FINALIZADOS!"
